--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.1"
   },
-  "scripts": { 
+  "scripts": {
     "start": "react-scripts start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-   },
+  },
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -38,5 +38,8 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://R2th.github.io/to_do_app"
+  "homepage": "http://R2th.github.io/to-do-list",
+  "devDependencies": {
+    "gh-pages": "^3.2.0"
+  }
 }
